animation mobile responsive problem solved

--- a/resources/css/comments.css
+++ b/resources/css/comments.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, auto));
   gap: 2rem;
+  overflow-x: hidden;
 }
 .comment-wrapper {
   padding: 100px 10%;
