--- a/resources/css/contact.css
+++ b/resources/css/contact.css
@@ -5,6 +5,7 @@
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
   gap: 2rem;
+  overflow-x: hidden;
 }
 
 .contact .contact-text {
