--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -10,6 +10,7 @@
   color: white;
   background-size: cover;
   background-position: top center;
+  overflow-x: hidden;
 }
 
 .home .home-content h1 {
