--- a/resources/css/tour2.css
+++ b/resources/css/tour2.css
@@ -5,6 +5,7 @@
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
   gap: 9rem;
+  overflow-x: hidden;
 }
 .tour2 .tour2-content {
   text-align: left;
